# smart-office-energy-monitoring-system

./: .gitignore  README.md  alert_logic_changes.diff  energy-feature.patch  t.txt  ux-fixes.patch
backend/: .env.example  conftest.py  office.db  pyproject.toml
backend/app/: main.py
backend/app/apis/: alert.py  devices.py  power.py  summary.py  websocket.py
backend/app/database/: database.py  db_types.py  init_db.py  models.py  seed.py
backend/app/services/: alert_engine.py  alert_scheduler.py  alert_service.py  device_service.py  discord_service.py  energy_service.py  gemini_service.py  simulator.py  websocket_manager.py
backend/app/utils/: timeutils.py
backend/tests/: test_alert_engine_discord_integration.py  test_alert_service_gemini_integration.py  test_discord_service.py  test_gemini_service.py
discord_client/: .env.example  README.md  bot.py  config.py  requirements.txt
discord_client/commands/: alerts.py  analyze.py  power.py  room.py  status.py
discord_client/services/: backend_client.py
discord_client/utils/: embeds.py
frontend/: vite.config.js
frontend/src/: App.css  App.jsx  index.css
