[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
    "tzdata>=2024.1",
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
